--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,90 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="d-flex flex-column vh-100">
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand" href="/">nagano cake</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+            <% if user_signed_in? %>
+              <li class="nav-item">
+                <%#= link_to  my_page_path, class: 'nav-link text-dark' do %>
+                マイページ
+                <%# end %>
+              </li>
+              <li class="nav-item">
+                <%#= link_to items_path, class: 'nav-link text-dark' do %>
+                商品一覧
+                <%# end %>
+              </li>
+              <li class="nav-item">
+                <%#= link_to cart_items_path, class: 'nav-link text-dark' do %>
+                カート
+                <%# end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to destroy_user_session_path, method: :delete, class: 'nav-link text-dark' do %>
+                ログアウト
+                <% end %>
+              </li>
+            <% elsif admin_signed_in? %>
+              <li class="nav-item">
+                <%#= link_to admin_items_path, class: 'nav-link text-dark' do %>
+                商品一覧
+                <%# end %>
+              </li>
+              <li class="nav-item">
+                <%#= link_to admin_customers_path, class: 'nav-link text-dark' do %>
+                会員一覧
+                <%# end %>
+              </li>
+              <li class="nav-item">
+                <%#= link_to admin_root_path, class: 'nav-link text-dark' do %>
+                注文履歴一覧
+                <%# end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' do %>
+                ログアウト
+                <% end %>
+              </li>
+
+            <% else %>
+              <li class="nav-item">
+                <%#= link_to  about_path, class: 'nav-link text-dark' do %>
+                About
+                <%# end %>
+              </li>
+              <li class="nav-item">
+                <%#= link_to items_path, class: 'nav-link text-dark' do %>
+                商品一覧
+                <%# end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to new_user_registration_path, class: 'nav-link text-dark' do %>
+                新規登録
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to new_user_session_path, class: 'nav-link text-dark' do %>
+                ログイン
+                <% end %>
+              </li>
+            <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <%= yield %>
+    </main>
   </body>
 </html>
