--- a/app/views/admin/registrations/new.html.erb
+++ b/app/views/admin/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Sign up</h2>
+<h2>新規会員登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "admin/shared/error_messages", resource: resource %>
@@ -27,3 +27,4 @@
 <% end %>
 
 <%= render "admin/shared/links" %>
+
