--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,3 +1,95 @@
+<div class="container">
+  <div class="row">
+    <h4>新規会員登録</h4>
+  </div>
+
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "admin/shared/error_messages", resource: resource %>
+
+  <div class="form-group row">
+    <%= f.label "名前", class: "col-md-3 offset-md-1 col-form-label" %>
+    <div class="col-md-3">
+      <%= f.text_field :last_name, autofocus: true, class: "form-control" %>
+    </div>
+    <div class="col-md-3">
+      <%= f.text_field :first_name,  class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <%= f.label "フリガナ", class: "col-md-3 offset-md-1 col-form-label" %>
+    <div class="col-md-3">
+      <%= f.text_field :last_name_kana,  class: "form-control" %>
+    </div>
+    <div class="col-md-3">
+      <%= f.text_field :first_name_kana,  class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <%= f.label "メールアドレス", class: "col-md-3 offset-md-1 col-form-label" %>
+    <div class="col-md-3">
+      <%= f.email_field :email, autocomplete: "email",  class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <%= f.label "郵便番号(ハイフンなし)", class: "col-md-3 offset-md-1 col-form-label" %>
+    <div class="col-md-3">
+      <%= f.text_field :postal_code,  class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <%= f.label "住所", class: "col-md-3 offset-md-1 col-form-label" %>
+    <div class="col-md-6">
+      <%= f.text_field :address,  class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <%= f.label "電話番号(ハイフンなし)", class: "col-md-3 offset-md-1 col-form-label" %>
+    <div class="col-md-3">
+      <%= f.text_field :telephone_number,  class: "form-control" %><br>
+    </div>
+  </div>
+
+  <div class="form-group row ">
+    <%= f.label "パスワード", class: "col-md-3 offset-md-1 col-form-label" %>
+    <% if @minimum_password_length %>
+     (<%= @minimum_password_length %> 文字以上)
+    <% end %>
+    <div class="col-md-3">
+      <%= f.password_field :password, autocomplete: "new-password",  class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <%= f.label "確認用", class: "col-md-3 offset-md-1 col-form-label" %>
+    <div class="col-md-3">
+      <%= f.password_field :password_confirmation, autocomplete: "new-password",  class: "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group row  justify-content-center">
+    <div class="col-auto ">
+      <%= f.submit "新規登録", class: "btn btn btn-success px-5 py-2" %>
+    </div>
+  </div>
+  <% end %>
+
+  <div class="row">
+    <h4 class="p-3">既に登録済みの方</h4>
+  </div>
+  <div class="row">
+    <div class="col-md-6 offset-md-2 ">
+      <%= link_to "こちら", new_user_session_path, class: "p-2" %>
+      からログインしてください
+    </div>
+  </div>
+</div>
+
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
