--- a/app/views/admin/saunas/new.html.erb
+++ b/app/views/admin/saunas/new.html.erb
@@ -1,75 +1,83 @@
-<h1>Admin::Saunas#new</h1>
-<p>Find me in app/views/admin/saunas/new.html.erb</p>
-
-<%= form_with model: @order, url: comfirm_orders_path do |f| %>
 <div class="container">
-  <h3 class="m-3">注文情報入力</h3>
+  <% if @sauna.errors.any? %>
+    <%= @sauna.errors.count %>件のエラーが発生しました
+    <ul>
+      <% @sauna.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
   <div class="row">
-    <p><strong>支払方法</strong></p>
+    <h4 class="p-3">サウナ登録</h4>
   </div>
-  <div class="row">
-    <div class="col-md">
-      <ul>
-        <%= f.radio_button :payment_method, Order.payment_methods.key(0), :checked => true  %>
-        <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
-      </ul>
-      <ul>
-        <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
-        <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer]%>
-      </ul>
+
+  <div class="mb-10">
+  <%= form_with model: @sauna, url: new_admin_sauna_path do |f| %>
+
+    <div class="form-group row">
+      <%= f.label "商品画像", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-6">
+        <%= f.file_field :sauna_image, placeholder:"ファイルを選択"  %>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <%= f.label "サウナ名", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-5">
+        <%= f.text_field :name, placeholder:"商品名",  class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <%= f.label "サウナ説明", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-5">
+        <%= f.text_area :introduction, placeholder:"ここに説明文を記述します",  class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <%= f.label "入湯料", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-5 pr-0">
+        <%= f.text_field :price, placeholder:"1000",  class: "form-control" %>
+      </div>
+      <div class="col-md-1 pl-0">
+        円
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <%= f.label "ジャンル", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-5 pr-0">
+        <%= f.select :genre_id,options_from_collection_for_select(Genre.all, :id, :name), include_blank: true %>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <%= f.label "エリア", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-5 pr-0">
+        <%= f.select :area_id,options_from_collection_for_select(Area.all, :id, :name), include_blank: true, class: "form-control" %>
+      </div>
+    </div>
+
+
+
+    <div class="form-group row">
+      <%= f.label "営業ステータス", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-2">
+        <%= f.radio_button :is_active, true %>
+        <%= f.label :"営業中" %>
+      </div>
+      <div class="col-md-2">
+        <%= f.radio_button :is_active, false %>
+        <%= f.label :"閉業" %>
+      </div>
+    </div>
+    <div class="row  justify-content-center">
+      <div class="col-auto ">
+        <%= f.submit "新規登録", class: "btn btn btn-success px-5 py-2" %>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <p><strong>お届け先</strong></p>
-  </div>
-  <div class="row">
-    <div class="col-md">
-      <ul>
-        <%= f.radio_button :select_address, "0", :checked => true  %>
-        <%= f.label "ご自身の住所" %>
-        <div class="pl-4">
-          〒<%= current_customer.postal_code %><%= current_customer.address %><br>
-          <%= current_customer.last_name %><%= current_customer.first_name %>
-        </div>
-      </ul>
-      <ul>
-        <%= f.radio_button :select_address, "1" %>
-        <%= f.label "新しい住所" %>
-        <div class="pl-4">
-          <table>
-            <tr>
-              <td class="small" style="width:40%">
-                <%= f.label :"郵便番号（ハイフンなし）" %>
-              </td>
-              <td style="width:60%">
-                <%= f.text_field :postal_code, placeholder:"0000000" %>
-              </td>
-            </tr>
-            <tr>
-              <td class="small">
-                <%= f.label :"住所" %>
-              </td>
-              <td>
-                <%= f.text_field :address, placeholder:"東京都渋谷区代々木神園町0-0" %>
-              </td>
-            </tr>
-            <tr>
-              <td class="small">
-                <%= f.label :"宛名" %>
-              </td>
-              <td>
-                <%= f.text_field :name, placeholder:"令和道子" %>
-              </td>
-            </tr>
-          </table>
-        </div>
-      </ul>
-    </div>
-  </div>
-  <div class="row justify-content-center">
-    <div class="col-auto">
-      <%= f.submit '確認画面へ進む', class: "btn btn-sm btn-success" %>
-    </div>
-  </div>
+  <% end %>
 </div>
-<% end %>
+
