--- a/app/views/admin/saunas/edit.html.erb
+++ b/app/views/admin/saunas/edit.html.erb
@@ -59,16 +59,28 @@
       </div>
     </div>
 
-
     <div class="form-group row">
       <%= f.label "販売ステータス", class: "col-md-2 offset-md-2 col-form-label" %>
       <div class="col-md-2">
-        <%= f.radio_button :is_active, true %>
+        <%= f.radio_button :sales_state, true %>
+        <%= f.label :"閉業" %>
+      </div>
+      <div class="col-md-2">
+        <%= f.radio_button :sales_state, false %>
         <%= f.label :"営業中" %>
+      </div>
+    </div>
+
+
+    <div class="form-group row">
+      <%= f.label "公開状況", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-2">
+        <%= f.radio_button :is_active, true %>
+        <%= f.label :"非公開" %>
       </div>
       <div class="col-md-2">
         <%= f.radio_button :is_active, false %>
-        <%= f.label :"閉業" %>
+        <%= f.label :"公開" %>
       </div>
     </div>
     <div class="row  justify-content-center">
