--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,9 @@
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
               <li class="nav-item">
-                <%#= link_to  my_page_path, class: 'nav-link text-dark' do %>
+                <%= link_to  my_page_path, class: 'nav-link text-dark' do %>
                 マイページ
-                <%# end %>
+                <% end %>
               </li>
               <li class="nav-item">
                 <%#= link_to items_path, class: 'nav-link text-dark' do %>
