[add]user/bookmark機能の追加,public/userのroute編集

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
               <li class="nav-item">
-                <%= link_to  my_page_path, class: 'nav-link text-dark' do %>
+                <%= link_to  user_path(current_user.id), class: 'nav-link text-dark' do %>
                 マイページ
                 <% end %>
               </li>
