--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col-md">
       <div class="p-2">
-        <label class="pr-2">登録情報</label><%= link_to "編集する", users_information_edit_path, class: "btn btn-sm btn-success"  %>
+        <label class="pr-2">登録情報</label><%= link_to "編集する", edit_user_path, class: "btn btn-sm btn-success"  %>
       </div>
     </div>
   </div>
