--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -12,7 +12,7 @@
   </div>
 
   <div class="mb-10">
-  <%= form_with model: @user, url: users_information_path do |f| %>
+  <%= form_with model: @user, url: user_path do |f| %>
 
 
 
@@ -71,7 +71,7 @@
         <%= f.submit "編集内容を保存", class: "btn btn btn-success px-5 py-2" %>
       </div>
       <div class="col-auto ">
-        <%= link_to "退会する", users_unsubscribe_path, class: "btn btn btn-danger px-3 py-2"  %>
+        <%= link_to "退会する", user_unsubscribe_path(@user), class: "btn btn btn-danger px-3 py-2"  %>
       </div>
     </div>
   </div>
