--- a/app/views/admin/saunas/edit.html.erb
+++ b/app/views/admin/saunas/edit.html.erb
@@ -29,6 +29,35 @@
     </div>
 
     <div class="form-group row">
+      <%= f.label "郵便番号", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-5">
+        <%= f.text_field :postal_code, placeholder:"0000000",  class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <%= f.label "都道府県", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-5">
+        <%= f.text_field :address1,  class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <%= f.label "市町村", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-5">
+        <%= f.text_field :address2,  class: "form-control" %>
+      </div>
+    </div>
+
+　　<div class="form-group row">
+      <%= f.label "以降の住所", class: "col-md-2 offset-md-2 col-form-label" %>
+      <div class="col-md-5">
+        <%= f.text_field :address3,  class: "form-control" %>
+      </div>
+    </div>
+
+
+    <div class="form-group row">
       <%= f.label "商品説明", class: "col-md-2 offset-md-2 col-form-label" %>
       <div class="col-md-5">
         <%= f.text_area :introduction, placeholder:"ここに説明文を記述します",  class: "form-control" %>
@@ -52,21 +81,15 @@
       </div>
     </div>
 
-    <div class="form-group row">
-      <%= f.label "エリア", class: "col-md-2 offset-md-2 col-form-label" %>
-      <div class="col-md-5 pr-0">
-        <%= f.select :area_id,options_from_collection_for_select(Area.all, :id, :name), class: "form-control" %>
-      </div>
-    </div>
 
     <div class="form-group row">
       <%= f.label "販売ステータス", class: "col-md-2 offset-md-2 col-form-label" %>
       <div class="col-md-2">
-        <%= f.radio_button :sales_state, true %>
+        <%= f.radio_button :sales_state, true, id: "sales_states1" %>
         <%= f.label :"閉業" %>
       </div>
       <div class="col-md-2">
-        <%= f.radio_button :sales_state, false %>
+        <%= f.radio_button :sales_state, false, id: "sales_states2" %>
         <%= f.label :"営業中" %>
       </div>
     </div>
@@ -75,11 +98,11 @@
     <div class="form-group row">
       <%= f.label "公開状況", class: "col-md-2 offset-md-2 col-form-label" %>
       <div class="col-md-2">
-        <%= f.radio_button :is_active, true %>
+        <%= f.radio_button :is_active, true, id: "is_active1" %>
         <%= f.label :"非公開" %>
       </div>
       <div class="col-md-2">
-        <%= f.radio_button :is_active, false %>
+        <%= f.radio_button :is_active, false, id: "is_active2" %>
         <%= f.label :"公開" %>
       </div>
     </div>
