--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <header class="shadow-sm">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="/">nagano cake</a>
+          <a class="navbar-brand" href="/">sauna fan</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,6 +27,12 @@
                 マイページ
                 <% end %>
               </li>
+              <li class="nav-item">
+                <%= link_to  user_bookmarks_path(current_user.id), class: 'nav-link text-dark' do %>
+                保存一覧
+                <% end %>
+              </li>
+
               <li class="nav-item">
                 <%#= link_to items_path, class: 'nav-link text-dark' do %>
                 商品一覧
