--- a/app/views/public/reviews/show.html.erb
+++ b/app/views/public/reviews/show.html.erb
@@ -55,5 +55,25 @@
 
   <%= link_to "編集する", edit_sauna_review_path(@review.sauna.id,@review), class: "btn btn-sm btn-success"  %>
   <%= link_to "削除する", sauna_review_path(@review), method: :delete, class: "btn btn-sm btn-danger"  %>
-  <%= link_to "コメント投稿", new_sauna_review_comment_path(@review.sauna,@review), class: "btn btn btn-success px-5 py-2"  %>
+  <%= link_to "コメント投稿", new_sauna_review_comment_path(@review.sauna,@review), class: "btn btn-sm btn-success"  %>
+
+  <% @comments.each do |comment| %>
+　<div class="card">
+　  <div class="card-body">
+　    <p class="card-text">
+　      <%= comment.comment_detail %>
+　    </p>
+　    <%= link_to  user_path(comment.user.id) do  %>
+　      <%= comment.user.full_name %>
+　    <% end %>
+  　   <%= comment.created_at_ymd %>
+  　   <% if comment.created_at != comment.updated_at %>
+  　     <%= comment.updated_at_ymd %> <p>に編集済み</p>
+  　   <% end %>
+  　 
+　  </div>
+
+　</div>
+  <% end %>
+
 </div>
