--- a/app/views/admin/saunas/new.html.erb
+++ b/app/views/admin/saunas/new.html.erb
@@ -17,7 +17,7 @@
     <div class="form-group row">
       <%= f.label "商品画像", class: "col-md-2 offset-md-2 col-form-label" %>
       <div class="col-md-6">
-        <%= f.file_field :sauna_image, placeholder:"ファイルを選択"  %>
+        <%= f.file_field :sauna_image, placeholder:"ファイルを選択", multiple: true  %>
       </div>
     </div>
 
