--- a/app/views/admin/saunas/show.html.erb
+++ b/app/views/admin/saunas/show.html.erb
@@ -1,3 +1,4 @@
+
 <% if flash[:notice] %>
   <p id="notice">
    <%= flash[:notice] %>
@@ -10,7 +11,10 @@
   </div>
   <div class="py-6 row">
     <div class="col-md-3 offset-md-1 align-self-center">
-      <%= image_tag @sauna.get_sauna_image(100,100) %>
+      <%#= @sauna.get_sauna_images(20 , 30) %></br>
+      <% @sauna.sauna_images.each do |image| %>
+        <%= image_tag image, size: '100x100' %>
+      <% end %>
     </div>
     <div class="col-md-5 align-self-center">
       <table class="table table-borderless">
@@ -64,7 +68,7 @@
   </div>
   <div class="row  justify-content-center">
     <div class="col-auto ">
-      <%#= link_to "レビューを書く", edit_admin_sauna_path(@sauna), class: "btn btn btn-success px-5 py-2"  %>
+      <%= link_to "編集", edit_admin_sauna_path(@sauna), class: "btn btn btn-success px-5 py-2"  %>
     </div>
   </div>
 </div>
