--- a/app/views/public/saunas/show.html.erb
+++ b/app/views/public/saunas/show.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="py-6 row justify-content-center">
     <div class="col-md-12 align-self-center">
-      <%#= image_tag @item_show.get_item_image %>
+      <%= image_tag @sauna.get_item_image %>
     </div>
   </div>
 
